--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>김 블라디슬라프 - 한국어 웹사이트 제작 및 SEO 최적화</title>
     <meta name="google-site-verification" content="rTiRdpYLjJzi4MMOknf4f3M2uwoIaaHQLyF57RfSAtA" />
-    <meta name="naver-site-verification" content="" />
+    <meta name="naver-site-verification" content="146b7db469d41de0493cfe5500097819b11cd6cc" />
     <meta
       name="description"
       content="한국어, 영어, 러시아어 지원되는 웹사이트 제작. Naver 및 Google 상위 노출을 위한 SEO 최적화. 고객 유입을 확실하게 늘려보세요."
