--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      window.location.replace('/')
+      window.location.replace('/portfolio')
     </script>
   </body>
 </html>
