--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     <meta name="google-site-verification" content="rTiRdpYLjJzi4MMOknf4f3M2uwoIaaHQLyF57RfSAtA" />
     <meta name="naver-site-verification" content="26395dfd63d084d707858a03239b94cdedce8b70" />
-    <script type="module" crossorigin src="/assets/main-Cc-9Yke8.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-BFZZ7bS_.js">
-    <link rel="stylesheet" crossorigin href="/assets/createLucideIcon-DfdUjnPk.css">
+    <script type="module" crossorigin src="/assets/main-BECrNgio.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-DIVY2-_h.js">
+    <link rel="stylesheet" crossorigin href="/assets/createLucideIcon-DYgJq1Sc.css">
   </head>
   <body>
     <!-- Google Tag Manager -->
