--- a/index.html
+++ b/index.html
@@ -8,38 +8,34 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Основные мета-теги -->
-    <title>블라디슬라프 킴 - 맞춤형 홈페이지 디자인 및 개발</title>
+    <title>Владислав Ким - индивидуальный дизайн и разработка сайтов</title>
     <meta
       name="description"
-      content="한국 시장을 위한 고전환율 웹사이트 제작. 맞춤형 디자인, 다국어 지원, SEO 최적화로 온라인 비즈니스 성장을 도와드립니다."
-    />
-    <meta
-      name="keywords"
-      content="맞춤형 홈페이지 제작, 웹사이트 제작, 한국 웹디자인, 코리아 웹개발, 반응형 사이트, 다국어 웹사이트, SEO 최적화"
+      content="Создание высококонверсионных сайтов для русскоязычного рынка. Индивидуальный дизайн, мультиязычная поддержка, SEO-оптимизация для роста вашего онлайн-бизнеса."
     />
 
     <!-- OpenGraph (для соцсетей) -->
-    <meta property="og:title" content="블라디슬라프 킴 - 한국 전문 웹 개발자" />
-    <meta property="og:description" content="40% 전환율 보장하는 고성능 웹사이트 개발" />
+    <meta property="og:title" content="Владислав Ким - веб-разработчик для русского рынка" />
+    <meta
+      property="og:description"
+      content="Разработка высокопроизводительных сайтов с гарантией конверсии 40%"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vladislavkim.com" />
-    <meta property="og:image" content="https://vladislavkim.com/preview-ko.jpg" />
+    <meta property="og:image" content="https://vladislavkim.com/preview-ru.jpg" />
 
     <!-- Дополнительные теги -->
     <meta name="author" content="Vladislav Kim" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
 
-    <!-- Для корейского языка -->
-    <meta http-equiv="content-language" content="ko" />
-    <meta name="geo.target" content="KR" />
-    <meta name="geo.region" content="KR" />
+    <!-- Для русского языка -->
+    <meta http-equiv="content-language" content="ru" />
+    <meta name="geo.target" content="RU" />
+    <meta name="geo.region" content="RU" />
 
     <meta name="google-site-verification" content="rTiRdpYLjJzi4MMOknf4f3M2uwoIaaHQLyF57RfSAtA" />
     <meta name="naver-site-verification" content="26395dfd63d084d707858a03239b94cdedce8b70" />
-    <script type="module" crossorigin src="/assets/main-Di-5HkJD.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-BBCNHXe8.js">
-    <link rel="stylesheet" crossorigin href="/assets/createLucideIcon-DYgJq1Sc.css">
   </head>
   <body>
     <!-- Google Tag Manager -->
@@ -104,5 +100,6 @@
     ></noscript>
     <!-- /Yandex.Metrika counter -->
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
