--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
@@ -36,6 +36,9 @@
 
     <meta name="google-site-verification" content="rTiRdpYLjJzi4MMOknf4f3M2uwoIaaHQLyF57RfSAtA" />
     <meta name="naver-site-verification" content="26395dfd63d084d707858a03239b94cdedce8b70" />
+    <script type="module" crossorigin src="/assets/main-BLMpak_0.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-DVr-ZMor.js">
+    <link rel="stylesheet" crossorigin href="/assets/createLucideIcon-DYgJq1Sc.css">
   </head>
   <body>
     <!-- Google Tag Manager -->
@@ -100,6 +103,5 @@
     ></noscript>
     <!-- /Yandex.Metrika counter -->
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
