--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <meta name="google-site-verification" content="rTiRdpYLjJzi4MMOknf4f3M2uwoIaaHQLyF57RfSAtA" />
     <meta name="naver-site-verification" content="26395dfd63d084d707858a03239b94cdedce8b70" />
-    <script type="module" crossorigin src="/assets/main-BLMpak_0.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-DVr-ZMor.js">
+    <script type="module" crossorigin src="/assets/main-CoQ2yRXS.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-BoPH75A3.js">
     <link rel="stylesheet" crossorigin href="/assets/createLucideIcon-DYgJq1Sc.css">
   </head>
   <body>
