--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Основные мета-теги -->
-    <title>Владислав Ким - индивидуальный дизайн и разработка сайтов</title>
-    <meta
-      name="description"
-      content="Создание высококонверсионных сайтов для русскоязычного рынка. Индивидуальный дизайн, мультиязычная поддержка, SEO-оптимизация для роста вашего онлайн-бизнеса."
-    />
+    <title>Сайты под ключ | Владислав Ким</title>
+    <meta name="description" content="Современный веб-дизайн. Чисто. Чётко. Функционально." />
 
     <!-- OpenGraph (для соцсетей) -->
-    <meta property="og:title" content="Владислав Ким - веб-разработчик для русского рынка" />
+    <meta property="og:title" content="Сайты под ключ | Владислав Ким" />
     <meta
       property="og:description"
-      content="Разработка высокопроизводительных сайтов с гарантией конверсии 40%"
+      content="Современный веб-дизайн. Чисто. Чётко. Функционально."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vladislavkim.com" />
@@ -36,9 +33,8 @@
 
     <meta name="google-site-verification" content="rTiRdpYLjJzi4MMOknf4f3M2uwoIaaHQLyF57RfSAtA" />
     <meta name="naver-site-verification" content="26395dfd63d084d707858a03239b94cdedce8b70" />
-    <script type="module" crossorigin src="/assets/main-CoQ2yRXS.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/createLucideIcon-BoPH75A3.js">
-    <link rel="stylesheet" crossorigin href="/assets/createLucideIcon-DYgJq1Sc.css">
+    <script type="module" crossorigin src="/assets/main-BJAcp6dW.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DYgJq1Sc.css">
   </head>
   <body>
     <!-- Google Tag Manager -->
